# pytest-automation

./: .gitignore  README.md  pyproject.toml
automation/tools/: base_tool.py
tests/: test_base_tool.py
