[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pytest-automation-framework"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pytest>=8.0.0",
]


[tool.setuptools]
package-dir = { "" = "automation" }


[tool.setuptools.packages.find]
where = ["automation"]


[tool.pytest.ini_options]
addopts = """--verbose
              --capture=no"""
testpaths = ["tests"]
pythonpath = ["automation"]