[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-automation-framework"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pytest>=8.0.0",
  "pytest-html>=4.1.1",
]

[tool.setuptools]
package-dir = { "" = "automation" }

[tool.setuptools.packages.find]
where = ["automation"]

[tool.pytest.ini_options]
addopts = """--verbose
              --capture=no
              --html=reports/report.html --self-contained-html
          """
log_cli = true
log_cli_level = "INFO"
log_file = "logs/tests.log"
log_file_level = "DEBUG"
log_format = "%(asctime)s [%(levelname)s] %(name)s - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]
pythonpath = ["automation"]